# smart-greenhouse

./: .gitignore  .gitmodules  README.md  greenhouse_report.tex
plantNodeDemo/: .gitignore  CMakeLists.txt  README.md  quick-start.sh  sdkconfig.defaults
plantNodeDemo/main/: CMakeLists.txt  idf_component.yml
plantNodeDemo/main/include/common/: config.h  config_local.h.template  config_local.template.h
plantNodeDemo/main/include/network/: coap_client.h  http_client.h  wifi_manager.h
plantNodeDemo/main/include/sensors/: sensor_manager.h
plantNodeDemo/main/include/simulation/: greenhouse_simulator.h
plantNodeDemo/main/src/: main.c
plantNodeDemo/main/src/network/: coap_client.c  http_client.c  wifi_manager.c
plantNodeDemo/main/src/sensors/: sensor_manager.c
plantNodeDemo/main/src/simulation/: greenhouse_simulator.c
server/: .gitignore  README.md  docker-compose.yml
server/backend/: .env.example  Dockerfile  main.py  main_unified.py  requirements.txt
server/backend/admin/: admin_config.py  create_admin.py
server/backend/app/core/: auth.py  config.py  dependencies.py  exceptions.py
server/backend/app/db/: database.py
server/backend/docs/: STRUCTURE.md
server/database/: Dockerfile.migrator  README.md
server/database/init/: 00-create-multiple-databases.sh  01_init_database.sh
server/database/scripts/: migrate_and_seed.sh
server/database/sql/: 01_create_schemas.sql  02_create_tables.sql  03_create_hypertables.sql  04_create_indexes.sql  05_create_continuous_aggregates.sql  06_create_policies.sql  07_seed_data.sql  08_migrate_sensor_types.sql
(+29 files in other folders)
